# alice

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  docker-compose.yaml  index.html  ollama.dockerfile  package-lock.json  package.json  research-architecture.md  roadmap.md  runbook.md  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml  ollama.dockerfile  surrealdb.dockerfile
architecture/: README.md  data-strategy.md  dogfooding.md
common/: engine.test.ts  engine.ts  package.json  workflow.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ChatInput.tsx  ChatLog.tsx  commands.ts  main.tsx  state.ts
src/: api.rs  channel.ts  command.ts  components.ts  main.rs  main.ts  main.tsx  state.ts
src/modules/: loader.ts
src/services/: surreal.ts  webllm.ts
src/view/: app.ts  app.tsx  chat.ts  chat.tsx  loader.ts  loader.tsx  message.ts
