[package]
name = "alice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
serde_json = "1.0.143"
tracing = "0.1"
tracing-subscriber = "0.3"